2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-custom-bsp.m4: Let _RTEMS_CHECK_CUSTOM_BSP look for
	*.cfg into c/src/lib/libbsp/<cpu>/<bsp_family>/make/custom.

2009-10-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/canonical-target-name.m4, aclocal/check-networking.m4,
	aclocal/check-posix.m4, aclocal/enable-posix.m4,
	aclocal/rtems-cpu-subdirs.m4: Remove posix/unix.

2009-10-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Rework make/custom/* handling.
	* aclocal/check-custom-bsp.m4: Change *.cfg handling.
	* Makefile.am: Remove make/custom/default.cfg-rule.

2009-10-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550.c: Enable interrupts during open to avoid
	NULL pointer access in interrupt handler.

2009-10-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Update for block
	device API change.

2009-10-08	Chris Johns <chrisj@rtems.org>

	* libchip/ide/ata.c, c/src/libchip/ide/ata_internal.h: Remove the
	multiblock support from the ATA driver. Multiblock at the disk
	level should not be a global policy as a disk may have more than
	one partition with different block sizes. An IDE driver could
	decide to use the feature with DMA but this a driver specific
	design choice. Fixed bugs relating to variable block sizes and
	large block transfer.
	* c/src/libchip/ide/ide_controller.c,
	c/src/libchip/ide/ide_ctrl_cfg.h, c/src/libchip/ide/ide_ctrl_io.h:
	Changed the block size to 32bits so blocks of 64K or bigger can be
	transfered in a single driver call.

2009-10-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ata.c: Revert previous change. Not all ARM BSPs use a
	shared irq.h yet and this breaks a significant number of them.

2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ata.c: Use simple vectored CPU macro to select interrupt
	model.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
