@@ -1,3 +1,7 @@
+2009-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>
+
+	* aclocal/canonical-target-name.m4: Remove RTEMS_HOST (unused).
+
 2009-10-14	Ralf Corsepius <ralf.corsepius@rtems.org>
 
 	* aclocal/canonical-target-name.m4:
