@@ -1,3 +1,7 @@
+2009-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>
+
+	* aclocal/canonical-target-name.m4: Remove RTEMS_HOST (unused).
+
 2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* aclocal/check-custom-bsp.m4: Let _RTEMS_CHECK_CUSTOM_BSP look for
